# misis2026s-25-03-simakova-a-a

./: .gitignore  CMakeLists.txt  status.md
prj.labs/: CMakeLists.txt
prj.labs/arrayd/: arrayd.cpp  arrayd.hpp
prj.labs/arrayt/: CMakeLists.txt  arrayt.hpp
prj.labs/bitsetd/: CMakeLists.txt  bitsetd.cpp  bitsetd.hpp
prj.labs/complex/: complex.cpp  complex.hpp
prj.labs/dio/: CMakeLists.txt  dio.hpp
prj.labs/queuea/: queuea.cpp  queuea.hpp
prj.labs/queuel/: CMakeLists.txt  queuel.cpp  queuel.hpp
prj.labs/rational/: rational.cpp  rational.hpp
prj.labs/stacka/: CMakeLists.txt  stacka.cpp  stacka.hpp
prj.labs/stackl/: stackl.cpp  stackl.hpp
prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_doctest.cpp  arrayt_test.cpp  bitsetd_bench.cpp  bitsetd_test.cpp  complex_test.cpp  dio_test.cpp  queuea_test.cpp  queuel_test.cpp  rational_test.cpp  stacka_test.cpp  stackl_test.cpp
