add_executable(complex_test complex_test.cpp)
target_link_libraries(complex_test complex)
add_executable(rational_test rational_test.cpp)
target_link_libraries(rational_test rational)
add_executable(arrayd_test arrayd_test.cpp)
target_link_libraries(arrayd_test arrayd)
add_executable(arrayt_test arrayt_test.cpp)
target_link_libraries(arrayt_test arrayt)
add_executable(arrayt_doctest arrayt_doctest.cpp)
target_link_libraries(arrayt_doctest arrayt)
add_executable(stackl_test stackl_test.cpp)
target_link_libraries(stackl_test stackl)
add_executable(stacka_test stacka_test.cpp)
target_link_libraries(stacka_test stacka)
add_executable(queuea_test queuea_test.cpp)
target_link_libraries(queuea_test queuea)
add_executable(queuel_test queuel_test.cpp)
target_link_libraries(queuel_test queuel)
